--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,19 +1,29 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  /* solution */
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
 }
-
 .logo {
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* solution */
+  margin: 0px;
+  padding: 0px;
+  gap: 8px;
+  display: flex;
 }
 
 a {
