--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -8,10 +8,25 @@ body {
   font-family: Besley, serif;
 }
 
+.start{
+  display: flex;
+  gap: 15px;
+}
+
+.end{
+  display: flex;
+  justify-content: end;
+  flex: auto;
+  gap: 15px;
+  align-items: center;
+}
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -27,6 +42,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin: auto 8px;
 }
 
 button {
@@ -41,8 +57,11 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 8px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0px;
 }
