--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,18 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
@@ -23,4 +35,52 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+/* Adding footer details */
+.footer{
+  display: flex;
+  background-color: #eeee;
+  height: 52px;
+  justify-content: space-between; 
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.left-links{
+  display: flex;
+  gap: 15px;
+  padding-left: 25px;
+}
+
+.right-links{
+  display: flex;
+  gap: 15px;
+  padding-right: 25px;
+}
+
+.buttons{
+  padding: 5px;
+  
+}
+
+/* removing bullet points and underlines */
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: rgb(43, 39, 39);
 }
