--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,82 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 900;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  padding: 5px;
 }
+
+/* Styling Card Div */
+
+.card-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  padding: 48px;
+  
+}
+
+.card{
+  width: 300px;
+  padding: 15px;
+
+}
+
+.content{
+  flex: 1;
+  display: flex;
+}
+
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  /* Aligning footer */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
-  width: 300px;
+  width: 250px;
+  
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px
+  
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
+  font-size: 32px;
+}
+
+li{
+  margin-bottom: 16px ;
+}
+
+ul{
+list-style-type: none;
+margin: 0;
+padding: 0;
 }
